<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yucong.gamedemo.minetetris.TetrisActivityAW" >

    <com.example.yucong.gamedemo.minetetris.TetrisViewAW
        android:id="@+id/tetrisViewAW1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="200dp"
        android:layout_marginRight="120dp" />

    <com.example.yucong.gamedemo.minetetris.NextBlockView
        android:id="@+id/nextBlockView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentRight="true" />

    <LinearLayout
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/nextBlockView1"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highscore" />

            <TextView
                android:id="@+id/highscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="startGame"
            android:text="@string/start" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="pauseGame"
            android:text="@string/pause" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="continueGame"
            android:text="@string/continueGame" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopGame"
            android:text="@string/end" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true" >

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="toLeft"
            android:layout_marginLeft="110dp"
            android:background="@mipmap/left_forward"
             />

        <TextView
            android:id="@+id/game_staus_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/startgame"
            android:textSize="10sp" />
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:onClick="toRoute"
            android:background="@mipmap/round"
            />
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"

            android:layout_marginRight="120dp"
            android:onClick="toRight"
            android:background="@mipmap/right_forward"
             />
    </RelativeLayout>

</RelativeLayout>